--- a/Tugas mg1.html
+++ b/Tugas mg1.html
@@ -30,6 +30,7 @@
 			<tr>
 				<td>
 					<h1>Pantai Sari Ringgung</h1>
+					<img src="psr.jpeg" alt="pantai sari Ringgung" width="200px">
 					<p>
 						Apabila kamu berangkat dari Tugu Adipura Bandar Lampung, Pantai Sari Ringgung berjarak sekitar 22 km dan bisa dicapai dengan berkendara selama kurang lebih 50 menit. Begitu sampai, kamu akan disambut dengan pemandangan pantai berpasir putih dan air laut berwarna biru jernih.
 					</p>
@@ -42,6 +43,7 @@
 				<td>
 					
 					<h1>Pulau Pahawang</h1>
+					<img src="Pahawang.jpg" alt="pahawang" width="200px">
 					<p>Pulau Pahawang terdiri dari dua area, yakni Pahawang Besar dan Pahawang Kecil. Keduanya dikelilingi oleh pasir putih yang bersih. Tak ketinggalan air laut super jernih yang memungkinkan kamu untuk melihat biota laut di dalamnya. Kalau ingin lebih puas menikmati keindahan bawah laut, kamu bisa melakukan snorkeling dengan menyewa alatnya seharga Rp50.000 â Rp100.000.</p>
 				</td>
 			</tr>
@@ -51,6 +53,7 @@
 			<tr>
 				<td>
 					<h1>Taman Nasional Way Kambas</h1>
+					<img src="waykambas.jpg" alt="way kambas" width="200px">
 					<p>Taman Nasional Way Kambas (TNWK) adalah taman nasional perlindungan gajah yang terletak di daerah Lampung tepatnya di Kecamatan Labuhan Ratu, Lampung Timur, Indonesia. Selain di Way Kambas, sekolah gajah (Pusat Latihan Gajah) juga bisa ditemui di Minas, Riau. Gajah Sumatra (Elephas maximus sumatranus) yang hidup di kawasan ini semakin berkurang jumlahnya.
 
 					Taman Nasional Way Kambas berdiri pada tahun 1985 merupakan sekolah gajah pertama di Indonesia. Dengan nama awal Pusat Latihan Gajah (PLG) namun semenjak beberapa tahun terakhir ini namanya berubah menjadi Pusat Konservasi Gajah (PKG) yang diharapkan mampu menjadi pusat konservasi gajah dalam penjinakan, pelatihan, perkembangbiakan dan konservasi. Hingga sekarang PKG ini telah melatih sekitar 300 ekor gajah yang sudah disebar ke seluruh penjuru Tanah Air. Di Way Kambas juga tedapat International Rhino Foundation yang bertugas menjaga spesies badak agar tidak terancam punah.</p>
